# ai-spec-lifecycle

./: .brooks-lint-history.json  .gitignore  .npmignore  AGENTS.md  README.md  package.json  slm
.agents/skills/: spec-lifecycle-manager
.claude-plugin/: marketplace.json
.codex/: config.toml  hooks.json
.github/workflows/: cross-platform.yml  release.yml
docs/: README.md
docs/backlog/: README.md
docs/design/: coding-agent-operating-model.md  spec-lifecycle-management.md
docs/governance/: constitution.md  project-principles.md
docs/history/: spec-archive-index.md  spec-closure-log.md  spec-id-collision-acknowledgements.json
docs/reference/: ai-native-sdd-frameworks.md  coding-agent-workflow-research.md  document-routing-and-expert-review-matrix.md  kiro-compatibility-review.md  plugin-comparison-improvements.md  spec-lifecycle-dogfood-evaluation.md  spec-lifecycle-manager-mcp-install.md  spec-lifecycle-runtime.md
docs/release-notes/: v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md
docs/reviews/: agent-feedback.md
docs/roadmap/: README.md
docs/templates/: README.md
packaging/spec-lifecycle-manager/: Containerfile  clean-pycache.mjs  generate-build-info.mjs  ghcr-package.json  (+7 more)
scripts/: codex-spec-lifecycle-dev.sh  install-spec-lifecycle-manager-package.sh
tools/: README.md
tools/devcli/: README.md  pyproject.toml
tools/devcli/src/auriora_dev/: __init__.py  cli.py  repo.py  runner.py
tools/devcli/src/auriora_dev/commands/: __init__.py  check.py  common.py  doctor.py  package.py  plugin.py  release.py  release_notes.py  spec.py  sync.py
(+425 files in other folders)
